add get sessions handler
